--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Noticias colegio</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script type="text/javascript" src="javascript.js"></script>
 	<meta charset="utf-8">
 </head>
 <body>
@@ -53,7 +54,7 @@
 	</section>
 
 	<footer>
-		<div class="row">
+		<div class="row iconos">
 			<div class="col-08 row">
 				<div class="col-04">
 				<img class="icon" src="img/pagina-web.png">
@@ -77,6 +78,9 @@
 			<div class="col-12 linea">
 				
 			</div>
+		</div>
+		<div class="row col-12 center">
+			<p>2021 @ Colegio Gimnasio UFPS</p>			
 		</div>
 	</footer>
 </body>
